syntax = "proto3";

package leiFuncaoPackage;

service LeiFuncao {
    rpc encontralaLei (Coordenadas) returns (FuncaoAjuste);
    rpc readFuncaoAjusteStream (VoidNoParam) returns (stream FuncaoAjuste);
}

message VoidNoParam {}

message Coordenadas {
    int32 id = 1;
    string x = 2;
    string y = 3;
}

message Coeficientes {
    repeated double coeficientes = 4;
}

message FuncaoAjuste {
    string funcaoAjuste = 5;
}